Bug 154955 - PDF/UA Grouped shapes accessible description is missing
Summary: PDF/UA Grouped shapes accessible description is missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2023-04-21 11:32 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-27 13:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The example file saved to PDF (16.94 KB, application/pdf)
2023-04-21 11:32 UTC, Gabor Kelemen (Collabora)
Details
Missing alt text in PAC tool (79.99 KB, image/png)
2023-04-21 11:37 UTC, Gabor Kelemen (Collabora)
Details
4 figure objects in PAC tool instead of 2 (59.82 KB, image/png)
2023-04-21 11:37 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-21 11:32:32 UTC
Created attachment 186838 [details]
The example file saved to PDF

attachment 186834 [details] has a grouped shape of two blue rectangles with alt text.
This alt text is not exported to an accessible PDF. Non-grouped shapes 

Also the PDF/UA standard says :

Graphics that possess semantic value only in combination with other graphics shall be tagged with a
single Figure tag for each group.

These should be tagged together as one object.

1. Open attachment 186834 [details] 
2. Save as PDF with PDF/UA enabled
3. Open in the PAC tool
-> There are errors reported about missing alternate descriptions
-> The Screen Reader preview shows four Figure objects, but there should be only two for the blue and the green group.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61b41646c5a93ca24f2c9f143cdb0da2c9258989
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-04-21 11:37:15 UTC
Created attachment 186839 [details]
Missing alt text in PAC tool
Comment 2 Gabor Kelemen (Collabora) 2023-04-21 11:37:40 UTC
Created attachment 186840 [details]
4 figure objects in PAC tool instead of 2
Comment 3 stragu 2023-04-21 14:26:55 UTC
Confirmed with example document and VeraPDF:

Specification: ISO 14289-1:2014, Clause: 7.3, Test number: 1	
Figure tags shall include an alternative representation or replacement text that represents the contents marked with the Figure tag as noted in ISO 32000-1:2008, 14.7.2, Table 323
4 occurrences
SEFigure	
(Alt != null && Alt != '') || ActualText != null	
root/document[0]/StructTreeRoot[0](14 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[1](6 0 obj SEFigure Figure)
root/document[0]/StructTreeRoot[0](14 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[2](7 0 obj SEFigure Figure)
root/document[0]/StructTreeRoot[0](14 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[3](8 0 obj SEFigure Figure)
root/document[0]/StructTreeRoot[0](14 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[4](9 0 obj SEFigure Figure)

If saving as DOCX first, then exporting to PDF, the same test fails but only for two elements:

Specification: ISO 14289-1:2014, Clause: 7.3, Test number: 1	
Figure tags shall include an alternative representation or replacement text that represents the contents marked with the Figure tag as noted in ISO 32000-1:2008, 14.7.2, Table 323
2 occurrences
SEFigure	
(Alt != null && Alt != '') || ActualText != null	
root/document[0]/StructTreeRoot[0](12 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[1](6 0 obj SEFigure Figure)
root/document[0]/StructTreeRoot[0](12 0 obj PDStructTreeRoot)/K[0](4 0 obj SEDocument Document)/K[2](7 0 obj SEFigure Figure)

So only an issue when exporting from ODT?

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5cd9de202765e243e41416802f3e4486b8a96f16
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-07-21 12:43:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2582d2407c9b01a80aaa9ff1850eba576ed56eda

tdf#154955 svx: PDF/UA export: tag SdrObjGroup properly

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2023-07-21 13:18:35 UTC
fixed on master
Comment 6 Commit Notification 2023-07-27 13:24:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b55c602e8d7b3eca95a6b7cb32be4ee1937d7cfb

tdf#154955 svx: PDF/UA export: tag SdrObjGroup properly

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.