tdf#154955 svx: PDF/UA export: tag SdrObjGroup properly

ISO 14289-1:2014, 7.3 Graphics
  Graphics that possess semantic value only in combination with other
  graphics shall be tagged with a single Figure tag for each group.

Also produce the missing alt-text.

Change-Id: I78e802d8e17a29c2d19fcf3a7ec9961f8f04e391
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154684
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>